[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/quiz_panel.gd" id="1"]

[node name="QuizPanel" type="Control"]
anchors_preset = 8
anchor_bottom = 1.0
anchor_right = 1.0
visible = false
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 40
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
size_flags_horizontal = 3
text = "Zone Quiz"
uppercase = true

[node name="Progress" type="Label" parent="MarginContainer/VBoxContainer/Header"]
size_flags_horizontal = 1
horizontal_alignment = 2
text = "Question 1/5"

[node name="Body" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
size_flags_vertical = 3

[node name="Question" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Body"]
size_flags_vertical = 1
text = "Question"
wrap_mode = 1

[node name="Options" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Feedback" type="Label" parent="MarginContainer/VBoxContainer/Body"]
text = ""

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
alignment = 1

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
text = "Next"
disabled = true

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
text = "Close"

